--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -11,10 +12,10 @@
     <title>Store - Каталог</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="vendor/css/products.css" rel="stylesheet">
+    <link href="{% static 'css/products.css' %}" rel="stylesheet">
 
 </head>
 
@@ -91,13 +92,13 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img class="d-block img-fluid" src="vendor/img/slides/slide-1.jpg" alt="First slide">
+                        <img class="d-block img-fluid" src="{% static 'img/slides/slide-1.jpg' %}" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="vendor/img/slides/slide-2.jpg" alt="Second slide">
+                        <img class="d-block img-fluid" src="{% static 'img/slides/slide-2.jpg' %}" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="vendor/img/slides/slide-3.jpg" alt="Third slide">
+                        <img class="d-block img-fluid" src="{% static 'img/slides/slide-3.jpg' %}" alt="Third slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -116,7 +117,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Adidas-hoodie.png"
+                                 src="{% static 'img/products/Adidas-hoodie.png' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -136,7 +137,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Blue-jacket-The-North-Face.png" alt="">
+                                 src="{% static 'img/products/Blue-jacket-The-North-Face.png' %}" alt="">
                         </a>
                         <div class="card-body">
                             <h4 class="card-title">
@@ -157,7 +158,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Brown-sports-oversized-top-ASOS-DESIGN.png"
+                                 src="{% static 'img/products/Brown-sports-oversized-top-ASOS-DESIGN.png' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -177,7 +178,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Black-Nike-Heritage-backpack.png"
+                                 src="{% static 'img/products/Black-Nike-Heritage-backpack.png' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -197,7 +198,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Black-Dr-Martens-shoes.png"
+                                 src="{% static 'img/products/Black-Dr-Martens-shoes.png' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -217,7 +218,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="vendor/img/products/Dark-blue-wide-leg-ASOs-DESIGN-trousers.png"
+                                 src="{% static 'img/products/Dark-blue-wide-leg-ASOs-DESIGN-trousers.png' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -265,14 +266,14 @@
 </footer>
 
 <!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="{% static 'jquery/jquery.min.js' %}"></script>
+<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
 <!-- FontAwesome script -->
-<script src="vendor/fontawesome/fontawesome-icons.js" crossorigin="anonymous"></script>
+<script src="{% static 'fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
 
 </body>
 
