--- a/templates/products/base.html
+++ b/templates/products/base.html
@@ -45,9 +45,9 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
+                                <a class="dropdown-item" href="{% url 'users:profile' user.id %}">Профиль</a>
                             </li>
-                            <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
+                            <li><a class="dropdown-item" href="{% url 'orders:all-orders' %}">Заказы</a></li>
                             {% if user.is_staff or user.is_superuser %}
                                 <li><a class="dropdown-item" href="{% url 'admin:index' %}">Админ-панель</a></li>
                             {% endif %}
