--- a/templates/products/baskets.html
+++ b/templates/products/baskets.html
@@ -1,3 +1,5 @@
+{% load humanize %}
+
 {% if baskets %}
     <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
         Корзина <span class="badge badge-secondary badge-pill">{{ baskets.count }}</span>
@@ -14,8 +16,9 @@
                         <div class="col-lg-4">
                             <input name="basketID" type="number" class="form-control"
                                    value="{{ basket.quantity }}" min="0">
+
                         </div>
-                        <div class="col-lg-4">{{ basket.sum_price }} руб.</div>
+                        <div class="col-lg-4">{{ basket.sum_price|intcomma }} руб.</div>
                         <div class="col-lg-4">
                             <a href="{% url 'users:remove' basket.id %}">
                                 <i class="fas fa-trash"></i>
@@ -29,12 +32,12 @@
     <div class="card mb-3">
         <div class="card-footer">
             <p class="float-left">Итого</p>
-            <h4 class="float-right">{{ baskets.total_sum }} руб.</h4>
+            <h4 class="float-right">{{ baskets.total_sum|intcomma }} руб.</h4>
         </div>
     </div>
 
 
-    <a class="btn btn-success btn-lg float-right" href="../orders/order-create.html">
+    <a class="btn btn-success btn-lg float-right" href="{% url 'orders:create' %}">
         Оформить заказ
     </a>
 {% else %}
