--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -1,39 +1,11 @@
-<<<<<<< HEAD
 {% extends 'products/base.html' %}
-{% load static %}
-=======
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
->>>>>>> bbb9ea9d2ec3e196d208a6f49b521e0359d97c49
+{% load static cache humanize %}
 
 {% block css %}
     <link href="{% static 'css/products.css' %}" rel="stylesheet">
 {% endblock %}
 
-<<<<<<< HEAD
 {% block content %}
-=======
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Store - Каталог</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'css/products.css' %}" rel="stylesheet">
-
-</head>
-
-<body>
-
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
->>>>>>> bbb9ea9d2ec3e196d208a6f49b521e0359d97c49
     <div class="container">
 
         <div class="row">
@@ -72,14 +44,6 @@
                                  alt="Third slide">
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
                 </div>
 
                 <div class="row">
@@ -96,7 +60,7 @@
                                     <h4 class="card-title">
                                         <a href="#">{{ product.name }}</a>
                                     </h4>
-                                    <h5>{{ product.price }} руб.</h5>
+                                    <h5>{{ product.price|intcomma }} руб.</h5>
                                     <p class="card-text">{{ product.description }}</p>
                                 </div>
                                 <div class="card-footer text-center">
@@ -109,222 +73,43 @@
                         </div>
                     {% endfor %}
 
-                </div>
 
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
-                            <a class="page-link"
-                               href="{% if products.has_previous %} {% url 'products:paginator' products.previous_page_number %} {% endif %}"
-                               tabindex="-1" aria-disabled="true">
-                                Предыдущая
-                            </a>
-                        </li>
-                        {% for page in products.paginator.page_range %}
-                            <li class="page-item">
-                                <a class="page-link" href="{% url 'products:paginator' page %}">
-                                    {{ page }}
+                </div>
+                {% if is_paginated %}
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item {% if not page_obj.has_previous %} disabled {% endif %}">
+                                <a class="page-link"
+                                   href="{% if page_obj.has_previous %} ?page={{ page_obj.previous_page_number }} {% endif %}"
+                                   tabindex="-1" aria-disabled="true">
+                                    Предыдущая
                                 </a>
                             </li>
-                        {% endfor %}
+                            {% for page in paginator.page_range %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ page }}">
+                                        {{ page }}
+                                    </a>
+                                </li>
+                            {% endfor %}
 
-                        <li class="page-item {% if not products.has_next %} disabled {% endif %}">
-                            <a class="page-link"
-                               href="{% if products.has_next %} {% url 'products:paginator' products.next_page_number %} {% endif %}"
-                               aria-disabled="true">
-                                Следующая
-                            </a>
-                        </li>
-                    </ul>
-<<<<<<< HEAD
-                </nav>
-=======
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<!-- Page Content -->
-<div class="container">
-
-    <div class="row">
-
-        <div class="col-lg-3">
-
-            <h1 class="my-4">Store</h1>
-            <div class="list-group">
-                <a href="#" class="list-group-item">Новинки</a>
-                <a href="#" class="list-group-item">Одежда</a>
-                <a href="#" class="list-group-item">Обувь</a>
-                <a href="#" class="list-group-item">Аксессуары</a>
-                <a href="#" class="list-group-item">Подарки</a>
-            </div>
-
-        </div>
-        <!-- /.col-lg-3 -->
-
-        <div class="col-lg-9">
-
-            <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        <img class="d-block img-fluid" src="{% static 'img/slides/slide-1.jpg' %}" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block img-fluid" src="{% static 'img/slides/slide-2.jpg' %}" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block img-fluid" src="{% static 'img/slides/slide-3.jpg' %}" alt="Third slide">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-
-            <div class="row">
-
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <a href="#">
-                            <img class="card-img-top"
-                                 src="{% static 'img/products/Adidas-hoodie.png' %}"
-                                 alt="">
-                        </a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="#">Худи черного цвета с монограммами adidas Originals</a>
-                            </h4>
-                            <h5>6 090,00 руб.</h5>
-                            <p class="card-text">Мягкая ткань для свитшотов. Стиль и комфорт – это образ жизни.</p>
-                        </div>
-                        <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <a href="#">
-                            <img class="card-img-top"
-                                 src="{% static 'img/products/Blue-jacket-The-North-Face.png' %}" alt="">
-                        </a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="#">Синяя куртка The North Face</a>
-                            </h4>
-                            <h5>23 725,00 руб.</h5>
-                            <p class="card-text">
-                                Гладкая ткань. Водонепроницаемое покрытие. Легкий и теплый пуховый наполнитель.
-                            </p>
-                        </div>
-                        <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <a href="#">
-                            <img class="card-img-top"
-                                 src="{% static 'img/products/Brown-sports-oversized-top-ASOS-DESIGN.png' %}"
-                                 alt="">
-                        </a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="#">Коричневый спортивный oversized-топ ASOS DESIGN</a>
-                            </h4>
-                            <h5>3 390,00 руб.</h5>
-                            <p class="card-text">Материал с плюшевой текстурой. Удобный и мягкий.</p>
-                        </div>
-                        <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <a href="#">
-                            <img class="card-img-top"
-                                 src="{% static 'img/products/Black-Nike-Heritage-backpack.png' %}"
-                                 alt="">
-                        </a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="#">Черный рюкзак Nike Heritage</a>
-                            </h4>
-                            <h5>2 340,00 руб.</h5>
-                            <p class="card-text">Плотная ткань. Легкий материал.</p>
-                        </div>
-                        <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <a href="#">
-                            <img class="card-img-top"
-                                 src="{% static 'img/products/Black-Dr-Martens-shoes.png' %}"
-                                 alt="">
-                        </a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="#">Черные туфли на платформе с 3 парами люверсов Dr Martens 1461 Bex</a>
-                            </h4>
-                            <h5>13 590,00 руб.</h5>
-                            <p class="card-text">Гладкий кожаный верх. Натуральный материал.</p>
-                        </div>
-                        <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <a href="#">
-                            <img class="card-img-top"
-                                 src="{% static 'img/products/Dark-blue-wide-leg-ASOs-DESIGN-trousers.png' %}"
-                                 alt="">
-                        </a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="#">Темно-синие широкие строгие брюки ASOS DESIGN</a>
-                            </h4>
-                            <h5>2 890,00 руб.</h5>
-                            <p class="card-text">Легкая эластичная ткань сирсакер Фактурная ткань.</p>
-                        </div>
-                        <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
-                        </div>
-                    </div>
-                </div>
->>>>>>> bbb9ea9d2ec3e196d208a6f49b521e0359d97c49
+                            <li class="page-item {% if not page_obj.has_next %} disabled {% endif %}">
+                                <a class="page-link"
+                                   href="{% if page_obj.has_next %} ?page={{ page_obj.next_page_number }} {% endif %}"
+                                   aria-disabled="true">
+                                    Следующая
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                {% endif %}
 
             </div>
-
         </div>
-
     </div>
 {% endblock %}
 
-<<<<<<< HEAD
+
 {% block footer %}
     <footer class="py-5 bg-dark">
         <div class="container">
@@ -332,29 +117,5 @@
         </div>
     </footer>
 {% endblock %}
-=======
-</div>
-<!-- /.container -->
 
-<!-- Footer -->
-<footer class="py-5 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Store 2022</p>
-    </div>
-    <!-- /.container -->
-</footer>
 
-<!-- Bootstrap core JavaScript -->
-<script src="{% static 'jquery/jquery.min.js' %}"></script>
-<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-<!-- FontAwesome script -->
-<script src="{% static 'fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
-
-</body>
-
-</html>
->>>>>>> bbb9ea9d2ec3e196d208a6f49b521e0359d97c49
