--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,11 +1,14 @@
 {% extends 'users/base.html' %}
+
+{% load socialaccount %}
+
 {% block content %}
     <main>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5">
 
-                    {% if messages or  form.non_field_errors %}
+                    {% if messages or form.non_field_errors %}
                         <div class="alert
                          {% if messages %} alert-success {% else %} alert-warning {% endif %} alert-dismissible fade show" role="alert"
                              style="margin-top: 50px;">
@@ -50,7 +53,7 @@
                                     <a href="#">
                                         <i class="fab fa-vk fa-2x" style="color: #4a658b;"></i>
                                     </a>
-                                    <a href="#">
+                                    <a href="{% provider_login_url 'github' %}">
                                         <i class="fab fa-github fa-2x" style="color: #303030;"></i>
                                     </a>
                                     <a href="#">
